--- a/app/comp/mapLocation/mapLocation.module.css
+++ b/app/comp/mapLocation/mapLocation.module.css
@@ -1,6 +1,8 @@
 .map_location_container {
     background-image: url("../../images/homePhoto.jpg");
     background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
     padding-bottom: 10vh;
 }
 
