--- a/app/comp/partnerFeedBack/partnerFeedBack.module.css
+++ b/app/comp/partnerFeedBack/partnerFeedBack.module.css
@@ -1,5 +1,8 @@
 .container{
     background-image: url("../../images/feedbackBackground.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
 }
 .layer{
     width: 100%;
