--- a/app/comp/mapLocation/mapLocation.module.css
+++ b/app/comp/mapLocation/mapLocation.module.css
@@ -12,10 +12,9 @@
 }
 
 .map{
-    width: 175vh;
+    width: 75vw;
     height: 40vh;
     border: solid 3px rgba(0, 0, 0, 0.53);
-    border-radius: 2vh;
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.53);
 }
 
@@ -23,27 +22,25 @@
     background-color: rgba(0, 0, 0, 0.72);
     box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.72);
     color: white;
-    border-radius: 2vh;
     padding-top: 8vh;
+    width: 18vw;
 }
 
 .office_info span{
-    font-size: 2.5vh;
+    font-size: 1.5vw;
 }
 .office_info p{
     padding: 2vh;
-    font-size: 2.5vh;
-    /*color: #aeaeae;*/
+    font-size: 1vw;
 }
 .our_office_header{
     text-align: center;
     font-size: 4vh;
     padding: 5vh;
-    background-color: rgba(14, 14, 14, 0.98);
+    background-color: rgba(14, 14, 14, 0.90);
     box-shadow: 10px 10px 10px #0e0e0e;
     color: white;
     width: 90%;
-    border-radius: 2vh;
     margin: 0 auto 10vh;
     position: relative;
     top: -5vh;
@@ -53,11 +50,10 @@
     text-align: center;
     font-size: 4vh;
     padding: 5vh;
-    background-color: rgba(14, 14, 14, 0.98);
+    background-color: rgba(14, 14, 14, 0.90);
     box-shadow: 10px 10px 10px #0e0e0e;
     color: white;
     width: 90%;
-    border-radius: 2vh;
     margin: 0 auto 10vh;
     opacity: 0;
 }
