--- a/app/comp/partners/partners.module.css
+++ b/app/comp/partners/partners.module.css
@@ -7,14 +7,14 @@
 .layer{
     width: 100%;
     height: 100%;
-    background-color: rgba(24, 24, 24, 0.47);
+    background-color: rgba(24, 24, 24, 0.30);
 }
 .partner_inner_container{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 15vh;
-    padding: 8vh 8vw 18vh;
+    gap: 30vh;
+    padding: 8vh 8vw 30vh;
 }
 .image_inner_container{
     width: 5vw;
@@ -22,10 +22,11 @@
 }
 .partner_logo_viewed{
     animation: roll 3s ease-in-out;
-    opacity: 0.6;
+    opacity: 1;
     &:hover{
         opacity: 1;
         cursor: pointer;
+        animation: roll 3s ease-in-out;
     }
 }
 .partner_logo{
@@ -37,12 +38,11 @@
     text-align: center;
     font-size: 4vh;
     padding: 5vh;
-    background-color: rgba(14, 14, 14, 0.98);
+    background-color: rgba(14, 14, 14, 0.75);
     box-shadow: 10px 10px 10px #0e0e0e;
     color: white;
     width: 90%;
     margin: 0 auto;
-    border-radius: 2vh;
     position: relative;
     top: -5vh;
     animation: rollUp 1s ease-in-out;
@@ -50,12 +50,11 @@
 .partner_h1_not_visible{
     opacity: 0;
     padding: 5vh;
-    background-color: rgba(14, 14, 14, 0.98);
+    background-color: rgba(14, 14, 14, 0.90);
     box-shadow: 10px 10px 10px #0e0e0e;
     color: white;
     width: 90%;
     margin: 0 auto;
-    border-radius: 2vh;
     position: relative;
     top: -5vh;
 }
@@ -79,6 +78,6 @@
     }
     100% {
         transform: rotate(360deg);
-        opacity: 0.6;
+        opacity: 1;
     }
 }
