--- a/app/comp/provideHome/provideHome.module.css
+++ b/app/comp/provideHome/provideHome.module.css
@@ -4,24 +4,24 @@
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    margin-top: -1vh;
 }
 .home_service_container{
     width: 95%;
     color: #dfdede;
     display: flex;
     justify-content: space-around;
-    background-color: rgba(14, 14, 14, 0.75);
+    background-color: rgba(14, 14, 14, 0.90);
     box-shadow: 10px 10px 10px #0e0e0e;
     position: relative;
     top: -10vh;
     left: 2%;
     animation: slideUp 1.5s ease-in-out;
-    border-radius: 10px;
 }
 .layer{
     width: 100%;
     height: 100%;
-    background-color: rgba(24, 24, 24, 0.47);
+    background-color: rgba(24, 24, 24, 0.20);
 }
 .home_service_isNotVisible{
     width: 95%;
