--- a/app/comp/AboutUsPhotoComp/aboutUsPhoto.module.css
+++ b/app/comp/AboutUsPhotoComp/aboutUsPhoto.module.css
@@ -25,5 +25,14 @@
     font-size: 1.5vw;
 }
 
+@media (max-width: 500px) {
+    .about_us_head_container h1{
+        font-size: 6vw;
+        font-weight: 800;
+    }
+    .about_us_head_container p{
+        font-size: 3vw;
+    }
+}
 
 
