--- a/app/comp/HomeImage/homeImage.module.css
+++ b/app/comp/HomeImage/homeImage.module.css
@@ -1,5 +1,3 @@
-
-
 .video{
     width: 100%;
     height: 100vh;
@@ -7,10 +5,22 @@
 }
 .slogan_container{
     position: absolute;
-    top: 50vh;
+    top: 75vh;
     left: 5vw;
-    width: 75vh;
-    color: #090808;
+    width: 35vw;
+    color: wheat;
+    font-size: 2vw;
+}
+
+@media (max-width: 500px) {
+    .slogan_container{
+        position: absolute;
+        top: 65vh;
+        left: 5vw;
+        width: 35vw;
+        color: wheat;
+        font-size: 14px;
+    }
 }
 
 
