--- a/app/comp/partners/partners.module.css
+++ b/app/comp/partners/partners.module.css
@@ -1,36 +1,29 @@
-.partners_container{
-    background-image: url("../../images/partners.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    width: 100%;
-}
+
 .layer{
     width: 100%;
     height: 100%;
-    background-color: rgba(24, 24, 24, 0.30);
 }
 .partner_inner_container{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
     gap: 30vh;
-    padding: 8vh 8vw 30vh;
+    padding: 5vh 5vw 30vh;
 }
 .image_inner_container{
     width: 5vw;
     height: 15vh;
 }
 .partner_logo_viewed{
+    max-width: 10vw;
+    max-height: fit-content;
     animation: roll 3s ease-in-out;
     opacity: 1;
-    &:hover{
-        opacity: 1;
-        cursor: pointer;
-        animation: roll 3s ease-in-out;
-    }
 }
 .partner_logo{
     opacity: 0;
+    max-width: 10vw;
+    max-height: fit-content;
 }
 
 
@@ -79,5 +72,36 @@
     100% {
         transform: rotate(360deg);
         opacity: 1;
+    }
+}
+
+
+
+
+@media (max-width: 500px) {
+    .partner_logo_viewed{
+        max-width: 30vw;
+        max-height: fit-content;
+        animation: roll 3s ease-in-out;
+        opacity: 1;
+    }
+    .partner_logo{
+        opacity: 0;
+        max-width: 30vw;
+        max-height: fit-content;
+    }
+    
+    .partner_logo{
+        opacity: 0;
+    }
+    .partner_inner_container{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        gap: 100px;
+        padding: 0px 40px;
+    }
+    .image_inner_container{
+        width: 30%;
     }
 }
