--- a/app/globals.css
+++ b/app/globals.css
@@ -7,3 +7,12 @@
     font-style: normal;
 }
 
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background: white;
+}
+::-webkit-scrollbar-thumb {
+    background: black;
+}
