--- a/app/comp/mapLocation/mapLocation.module.css
+++ b/app/comp/mapLocation/mapLocation.module.css
@@ -1,5 +1,5 @@
 .map_location_container {
-    background-image: url("../../images/homePhoto.jpg");
+    background-image: url("/homePhoto.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
