--- a/app/comp/contactUsPhotoComp/contactUsPhotoComp.module.css
+++ b/app/comp/contactUsPhotoComp/contactUsPhotoComp.module.css
@@ -1,5 +1,5 @@
 .container {
-    background-image: url("/HomePhoto.jpg");
+    background-image: url("/homePhoto.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
