--- a/app/comp/footer/footer.module.css
+++ b/app/comp/footer/footer.module.css
@@ -28,4 +28,15 @@
     .company_name {
         font-size: 20px;
     }
+    .footer_container{
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 4vh;
+        padding: 5vh;
+        width: 100%;
+        background-color: rgba(0, 0, 0, 0.9);
+        box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.9);
+        }
 }
