--- a/app/comp/partners/partners.module.css
+++ b/app/comp/partners/partners.module.css
@@ -78,7 +78,7 @@
 
 
 
-@media (max-width: 500px) {
+@media only screen and (max-width: 500px) {
     .partner_logo_viewed{
         max-width: 30vw;
         max-height: fit-content;
