--- a/app/comp/mapLocation/mapLocation.module.css
+++ b/app/comp/mapLocation/mapLocation.module.css
@@ -93,7 +93,7 @@
         margin: 0 auto 10vh;
         position: relative;
         top: 1vh;
-        animation: rollUp 1s ease-in-out;
+        animation: none;
     }
     .our_office_header_not_visible{
         text-align: center;
