--- a/app/comp/contactUsContent/contactUsContent.module.css
+++ b/app/comp/contactUsContent/contactUsContent.module.css
@@ -10,7 +10,9 @@
     text-align: center;
     align-items: center;
 }
-
+.link{
+    color: black;
+}
 @media (max-width: 500px) {
     .icon {
         width: 19vw;
